[dev][add] get user information route
