# docs/swagger.json
@@ -62,6 +62,38 @@
                 }
             }
         },
+        "/api/users/": {
+            "get": {
+                "description": "gets user information",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Получение информации о пользователе",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "JWT",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.GetUserResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/users/login": {
             "post": {
                 "description": "login the user and returns tokens",
@@ -186,6 +218,20 @@
                 }
             }
         },
+        "dto.GetUserResponse": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "fullName": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.ReauthResponse": {
             "type": "object",
             "properties": {
@@ -216,7 +262,6 @@
         "filters.FilterBody": {
             "type": "object",
             "required": [
-                "filter",
                 "order",
                 "skip",
                 "take"
